Novo codigo com geolocalização

--- a/TESTE DE API.html
+++ b/TESTE DE API.html
@@ -16,10 +16,10 @@
                             resposta.innerHTML = objeto.data.first_name + " " + objeto.data.last_name;
                             resposta.innerHTML = objeto.data.email;
 
-                            // email.innerHTML = objeto.data.map(
-                            //     (e)=>e.email
+                            email.innerHTML = objeto.data.map(
+                            (e)=>e.email
                                 
-                            // ).join("<br>");,
+                             ).join("<br>");
                             console.log(objeto);
 
 
